@@ -45,6 +45,8 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 - (id) initWithPath:(NSString*)path;
 
+- (BOOL) dbExists;
+
 - (void) close;
 
 @end
